--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Civilian Harm in Ukraine</title>
+    <title>TimeMap - Forensic Architecture</title>
     <link
       rel="stylesheet"
       href="https://api.mapbox.com/mapbox.js/v3.1.1/mapbox.css"
